# Brainwave_Matrix_Intern

./: .gitignore  README.md
Task_01/docs/: project.tree
Task_01/include/components/: SoundUnit.hpp
Task_01/include/utils/: ATMConstants.hpp  TechnicalSupport.hpp
Task_01/source/atm/: ATMInfo.cpp
Task_01/source/components/: SoundUnit.cpp
Task_01/source/transactions/: DepositTransaction.cpp
Task_01/source/utils/: TechnicalSupport.cpp
Task_01_ATM_Interface/: CMakeLists.txt  README.md
Task_01_ATM_Interface/docs/: API.md
Task_01_ATM_Interface/include/atm/: ATM.hpp
Task_01_ATM_Interface/include/components/: ATMScreen.hpp  CardReader.hpp
Task_01_ATM_Interface/include/transactions/: DepositTransaction.hpp
Task_01_ATM_Interface/include/utils/: Logger.hpp
Task_01_ATM_Interface/source/atm/: ATM.cpp
Task_01_ATM_Interface/source/components/: BankDB.cpp  CardReader.cpp
Task_02/: main.cpp
Task_02/BankSystem/: .gitignore  CMakeLists.txt
Task_02/BankSystem/include/: Transaction.hpp
Task_02/BankSystem/source/: User.cpp
Task_02/include/: User.hpp
Task_02/source/: Account.cpp
Task_03/BankSystem/: README.md
Task_03/BankSystem/include/: Account.hpp  Bank.hpp  (+1 more)
include/atm/: ATM.hpp  ATMInfo.hpp
include/components/: BankDB.hpp  CashDispenser.hpp  ReceiptPrinter.hpp  Vault.hpp
include/transactions/: Transaction.hpp  WithdrawTransaction.hpp
source/: main.cpp
source/atm/: ATM.cpp
source/components/: ATMScreen.cpp  CashDispenser.cpp  ReceiptPrinter.cpp  Vault.cpp
source/transactions/: WithdrawTransaction.cpp
source/utils/: Logger.cpp
(+3 files in other folders)
